fix[admin-Home]修復scrollBar & [lesson&Members&shop]原overflowY改auto

--- a/client/styles/adminShop.module.scss
+++ b/client/styles/adminShop.module.scss
@@ -20,7 +20,7 @@
 	grid-template-rows: auto;
 	margin-bottom: 10px;
 	max-height: 86%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	scrollbar-width: 15px;
 }
 
